--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <img class="logo" src="https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=facearea&w=200&h=200&q=80" alt="לוגו עיצוב גבות">
     <h1>אתר בבנייה</h1>
     <p>
-      האתר שלנו <b>Meshie Eyebrows</b> נמצא כרגע בבנייה.<br>
+      האתר שלנו <b>Meshi Eyebrows</b> נמצא כרגע בבנייה.<br>
       נשמח לראותך כאן בקרוב!
     </p>
     <div class="contact">
