הוספת לוגו חדש לעמוד הבית

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <img class="logo" src="images/Meshi_eyebrows_logo.jpg" alt="לוגו Meshie Eyebrows">
     <h1>אתר בבנייה</h1>
     <p>
-      האתר שלנו <b>Meshie Eyebrows</b> נמצא כרגע בבנייה.<br>
+      נמצא כרגע בבנייה <b>Meshi Eyebrows</b> האתר שלנו.<br>
       נשמח לראותך כאן בקרוב!
     </p>
     <div class="contact">
