הוספת לוגו חדש לעמוד הבית

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       margin: 40px 0;
     }
     .logo {
-      width: 180px;
+      width: 260px; /* שים כאן את הגודל הרצוי */
       display: block;
       margin: 0 auto 24px auto;
       box-shadow: 0 2px 8px #e5b5b5;
