הוספת לוגו חדש לעמוד הבית

--- a/dev.html
+++ b/dev.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=facearea&w=200&h=200&q=80" alt="לוגו עיצוב גבות" class="logo">
+  <header class="main-header">
+    <img src="images/Meshi_eyebrows_logo.jpg" alt="לוגו Meshie Eyebrows" class="logo">
     <h1>עיצוב גבות - Meshie Eyebrows</h1>
     <nav>
       <a href="dev.html" class="active">בית</a>
@@ -19,7 +19,7 @@
     </nav>
   </header>
   <main>
-    <div class="hero">
+    <section class="card hero">
       <div class="hero-text">
         <h2>הגבות שלך, המומחיות שלנו</h2>
         <p>
@@ -28,44 +28,50 @@
         </p>
         <a href="booking.html" class="cta-btn">לקביעת תור</a>
       </div>
-      <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=600&q=80" alt="מכון עיצוב גבות">
-    </div>
+      <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=600&q=80" alt="מכון עיצוב גבות" class="hero-img">
+    </section>
 
-    <div class="section-title">הערכים שלנו</div>
-    <div class="values-list">
-      <div class="value-box">
-        <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="מקצועיות">
-        <div><b>מקצועיות</b><br>שנים של ניסיון, הכשרות מתקדמות ותשומת לב לפרטים הקטנים.</div>
+    <section class="card">
+      <div class="section-title">הערכים שלנו</div>
+      <div class="values-list">
+        <div class="value-box">
+          <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="מקצועיות">
+          <div><b>מקצועיות</b><br>שנים של ניסיון, הכשרות מתקדמות ותשומת לב לפרטים הקטנים.</div>
+        </div>
+        <div class="value-box">
+          <img src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png" alt="יחס אישי">
+          <div><b>יחס אישי</b><br>כל לקוחה מקבלת ליווי אישי והתאמה מושלמת למבנה הפנים.</div>
+        </div>
+        <div class="value-box">
+          <img src="https://cdn-icons-png.flaticon.com/512/3524/3524659.png" alt="חדשנות">
+          <div><b>חדשנות</b><br>שימוש בטכניקות ובחומרים המתקדמים ביותר בעולם היופי.</div>
+        </div>
       </div>
-      <div class="value-box">
-        <img src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png" alt="יחס אישי">
-        <div><b>יחס אישי</b><br>כל לקוחה מקבלת ליווי אישי והתאמה מושלמת למבנה הפנים.</div>
-      </div>
-      <div class="value-box">
-        <img src="https://cdn-icons-png.flaticon.com/512/3524/3524659.png" alt="חדשנות">
-        <div><b>חדשנות</b><br>שימוש בטכניקות ובחומרים המתקדמים ביותר בעולם היופי.</div>
-      </div>
-    </div>
+    </section>
 
-    <div class="section-title">המלצות לקוחות</div>
-    <div class="testimonials">
-      <div class="testimonial">
-        "הגעתי עם גבות דלילות ויצאתי עם מראה טבעי ומושלם! היחס היה אישי ומקצועי." <span class="name">נועה מ.</span>
+    <section class="card">
+      <div class="section-title">המלצות לקוחות</div>
+      <div class="testimonials">
+        <div class="testimonial">
+          "הגעתי עם גבות דלילות ויצאתי עם מראה טבעי ומושלם! היחס היה אישי ומקצועי." <span class="name">נועה מ.</span>
+        </div>
+        <div class="testimonial">
+          "הפעם הראשונה שלא פחדתי לנסות משהו חדש. ממליצה בחום לכל מי שמחפשת מקצועיות אמיתית." <span class="name">דנה ר.</span>
+        </div>
+        <div class="testimonial">
+          "שירות מעולה, תוצאה מדויקת, והכי חשוב – חוויה נעימה!" <span class="name">שירי ל.</span>
+        </div>
       </div>
-      <div class="testimonial">
-        "הפעם הראשונה שלא פחדתי לנסות משהו חדש. ממליצה בחום לכל מי שמחפשת מקצועיות אמיתית." <span class="name">דנה ר.</span>
-      </div>
-      <div class="testimonial">
-        "שירות מעולה, תוצאה מדויקת, והכי חשוב – חוויה נעימה!" <span class="name">שירי ל.</span>
-      </div>
-    </div>
+    </section>
 
-    <div class="section-title">גלריה</div>
-    <div class="gallery">
-      <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=crop&w=400&q=80" alt="עיצוב גבות מקצועי">
-      <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=400&q=80" alt="תוצאה של עיצוב גבות">
-      <img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f?auto=format&fit=crop&w=400&q=80" alt="סלון יופי">
-    </div>
+    <section class="card">
+      <div class="section-title">גלריה</div>
+      <div class="gallery">
+        <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=crop&w=400&q=80" alt="עיצוב גבות מקצועי">
+        <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=400&q=80" alt="תוצאה של עיצוב גבות">
+        <img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f?auto=format&fit=crop&w=400&q=80" alt="סלון יופי">
+      </div>
+    </section>
   </main>
   <footer>
     &copy; 2025 עיצוב גבות - Meshie Eyebrows. כל הזכויות שמורות.
