הוספת לוגו חדש לעמוד הבית

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,36 @@
   <title>יצירת קשר | Meshi Eyebrows</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <style>
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: #fff8f0;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      padding: 10px 0;
+      text-align: center;
+      z-index: 1000;
+    }
+    main {
+      padding-top: 140px;
+    }
+    .logo {
+      max-height: 80px;
+    }
+    nav {
+      margin-top: 10px;
+    }
+    nav a {
+      display: inline-block;
+      margin: 0 12px;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=facearea&w=200&h=200&q=80" alt="לוגו עיצוב גבות" class="logo">
+    <img src="images/Meshi_eyebrows_logo.png" alt="לוגו Meshi Eyebrows" class="logo">
     <h1>Meshi Eyebrows</h1>
     <nav>
       <a href="index.html">בית</a>
@@ -35,13 +61,13 @@
       <button type="submit">שליחה</button>
     </form>
 
-    <div class="contact-info">
+    <div class="contact-info" style="margin-top: 32px;">
       <b>כתובת:</b> רחוב הדוגמה 10, תל אביב<br>
       <b>טלפון:</b> 050-1234567<br>
       <b>אימייל:</b> info@eyebrow-design.co.il
     </div>
 
-    <div class="map-container">
+    <div class="map-container" style="margin-top: 32px;">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3381.489921890722!2d34.78176871514515!3d32.0852999811937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151d4cb9a1e2c8f1%3A0x2a0b7a9a4c8c8b7d!2z15TXkNeR15nXkdeV15XXnSDXqdeZ16jXnNeV15nXkQ!5e0!3m2!1siw!2sil!4v1683381234567!5m2!1siw!2sil" allowfullscreen="" loading="lazy" title="מפה"></iframe>
     </div>
 
