הוספת לוגו חדש לעמוד הבית

--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,11 @@
       z-index: 1000;
     }
     main {
-      padding-top: 140px;
+      padding-top: 180px;
     }
     .logo {
-      max-height: 80px;
+      max-height: 120px;
+      width: auto;
     }
     nav {
       margin-top: 10px;
