--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,57 @@
       color: #b23a48;
       border-bottom: 2px solid #e05a5a;
     }
+    .contact-launch {
+      margin: 40px auto;
+      text-align: center;
+    }
+    .contact-launch button {
+      background-color: #e05a5a;
+      color: white;
+      border: none;
+      border-radius: 20px;
+      padding: 14px 28px;
+      font-size: 1.2em;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .contact-launch button:hover {
+      background-color: #b23a48;
+    }
+    .contact-popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: white;
+      padding: 40px 24px;
+      border-radius: 18px;
+      box-shadow: 0 0 30px rgba(0,0,0,0.5);
+      z-index: 2000;
+      max-width: 400px;
+      width: 90%;
+    }
+    .popup-overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.6);
+      z-index: 1500;
+    }
+    .close-popup {
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      background: none;
+      border: none;
+      font-size: 24px;
+      cursor: pointer;
+      color: #e05a5a;
+    }
   </style>
 </head>
 <body>
@@ -62,33 +113,34 @@
   </header>
 
   <main>
-    <div class="section-title">יצירת קשר</div>
-    <!-- טופס מחובר ל-Formspree -->
-    <form class="card contact-form" action="https://formspree.io/f/yourformid" method="POST">
-      <label for="name">שם מלא</label>
-      <input type="text" id="name" name="name" placeholder="שם מלא" required>
-
-      <label for="email">אימייל</label>
-      <input type="email" id="email" name="_replyto" placeholder="אימייל" required>
-
-      <label for="message">הודעה</label>
-      <textarea id="message" name="message" rows="4" placeholder="הודעה" required></textarea>
-
-      <button type="submit">שליחה</button>
-    </form>
-
-    <div class="contact-info" style="margin-top: 32px;">
-      <b>כתובת:</b> רחוב הדוגמה 10, תל אביב<br>
-      <b>טלפון:</b> 050-1234567<br>
-      <b>אימייל:</b> info@eyebrow-design.co.il
+    <div class="section-title">רוצה לשמוע על השירותים שלנו או לקבוע תור? אין בעיה!</div>
+    <div style="text-align:center; margin-top: 10px; font-size: 1.2em;">
+      הנה דרכי ההתקשרות איתנו:
     </div>
 
-    <div class="map-container" style="margin-top: 32px;">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3381.489921890722!2d34.78176871514515!3d32.0852999811937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151d4cb9a1e2c8f1%3A0x2a0b7a9a4c8c8b7d!2z15TXkNeR15nXkdeV15XXnSDXqdeZ16jXnNeV15nXkQ!5e0!3m2!1siw!2sil!4v1683381234567!5m2!1siw!2sil" allowfullscreen="" loading="lazy" title="מפה"></iframe>
+    <div class="contact-launch">
+      <button onclick="document.querySelector('.popup-overlay').style.display='block';document.querySelector('.contact-popup').style.display='block';">
+        טופס יצירת קשר
+      </button>
     </div>
 
-    <div style="text-align:center; margin-top:40px;">
-      <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=500&q=80" alt="עיצוב גבות" style="width:220px; border-radius:14px; box-shadow:0 2px 8px #e5b5b5;">
+    <div style="text-align:center;">
+      <a href="https://wa.me/+972547649019" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="וואטסאפ" style="width:48px;height:48px;">
+      </a>
+    </div>
+
+    <div class="popup-overlay" onclick="this.style.display='none';document.querySelector('.contact-popup').style.display='none';"></div>
+    <div class="contact-popup">
+      <button class="close-popup" onclick="document.querySelector('.popup-overlay').style.display='none';document.querySelector('.contact-popup').style.display='none';">×</button>
+      <p style="text-align:right;font-size:1.1em;margin-bottom:8px;">מעוניינת בפרטים נוספים? צרי איתנו קשר:</p>
+      <p style="text-align:right; direction: rtl;">טלפון: <span style="color:#e05a5a;">054-7649019</span></p>
+      <form action="https://formspree.io/f/yourformid" method="POST">
+        <input type="text" name="name" placeholder="שם מלא" required style="width:100%;margin:10px 0;padding:10px;">
+        <input type="text" name="phone" placeholder="טלפון נייד" required style="width:100%;margin:10px 0;padding:10px;">
+        <textarea name="message" placeholder="נושא הפנייה" rows="4" style="width:100%;margin:10px 0;padding:10px;" required></textarea>
+        <button type="submit" style="background:#e05a5a;color:white;border:none;padding:12px 24px;border-radius:10px;cursor:pointer;">שליחה</button>
+      </form>
     </div>
   </main>
 
