הוספת לוגו חדש לעמוד הבית

--- a/contact.html
+++ b/contact.html
@@ -124,6 +124,7 @@
       </button>
     </div>
 
+    <div style="text-align:center; font-size: 1.1em; margin-bottom: 10px;">ליצירת קשר בוואטספ:</div>
     <div style="text-align:center;">
       <a href="https://wa.me/+972547649019" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="וואטסאפ" style="width:48px;height:48px;">
