הוספת לוגו חדש לעמוד הבית

--- a/contact.html
+++ b/contact.html
@@ -104,16 +104,16 @@
   <header>
     <img src="images/Meshi_eyebrows_logo.png" alt="לוגו Meshi Eyebrows" class="logo">
     <nav>
-      <a href="accessibility.html">הצהרת נגישות</a>
-      <a href="contact.html" class="active">יצירת קשר</a>
-      <a href="booking.html">קביעת תור</a>
-      <a href="services.html">שירותים</a>
       <a href="index.html">בית</a>
+      <a href="services.html">שירותים</a>
+      <a href="booking.html">קביעת תור</a>
+      <a href="contact.html" class="active">יצירת קשר</a>
+      <a href="accessibility.html">הצהרת נגישות</a>
     </nav>
   </header>
 
   <main>
-    <div class="section-title">רוצה לשמוע על השירותים שלנו או לקבוע תור؟ אין בעיה‏!</div>
+    <div class="section-title">רוצה לשמוע על השירותים שלנו או לקבוע תור?‎ אין בעיה!</div>
     <div style="text-align:center; margin-top: 10px; font-size: 1.2em;">
       הנה דרכי ההתקשרות איתנו:
     </div>
@@ -134,7 +134,7 @@
     <div class="popup-overlay" onclick="this.style.display='none';document.querySelector('.contact-popup').style.display='none';"></div>
     <div class="contact-popup">
       <button class="close-popup" onclick="document.querySelector('.popup-overlay').style.display='none';document.querySelector('.contact-popup').style.display='none';">×</button>
-      <p style="text-align:right;font-size:1.1em;margin-bottom:8px;">מעוניינת בפרטים נוספים؟ צרי איתנו קשר‏:</p>
+      <p style="text-align:right;font-size:1.1em;margin-bottom:8px;">מעוניינת בפרטים נוספים?‎ צרי איתנו קשר:</p>
       <p style="text-align:right; direction: rtl;">טלפון: <span style="color:#e05a5a;">054-7649019</span></p>
       <form action="https://formspree.io/f/yourformid" method="POST">
         <input type="text" name="name" placeholder="שם מלא" required style="width:100%;margin:10px 0;padding:10px;">
