--- a/contact.html
+++ b/contact.html
@@ -98,6 +98,13 @@
       cursor: pointer;
       color: #e05a5a;
     }
+    .form-message {
+      text-align: center;
+      margin-top: 12px;
+      font-size: 1em;
+    }
+    .form-message.success { color: green; }
+    .form-message.error { color: red; }
   </style>
 </head>
 <body>
@@ -113,34 +120,39 @@
   </header>
 
   <main>
-    <div class="section-title"><span dir="rtl" style="display:inline-block; unicode-bidi:isolate;">רוצה לשמוע על השירותים שלנו או לקבוע תור? אין בעיה!</span></div>
-    <div style="text-align:center; margin-top: 10px; font-size: 1.2em;">
-      <span dir="rtl" style="display:inline-block; unicode-bidi:isolate;">הנה דרכי ההתקשרות איתנו:</span>
+    <div class="section-title" style="text-align:center;color:#d44c4c;">
+      <span dir="rtl" style="display:inline-block; unicode-bidi:isolate;">
+        רוצה לשמוע על השירותים שלנו או לקבוע תור? אין בעיה!
+      </span>
+    </div>
+    <div style="text-align:center; font-size: 1.2em; margin-top: 10px;">
+      <span dir="rtl" style="display:inline-block; unicode-bidi:isolate;">
+        הנה דרכי ההתקשרות איתנו:
+      </span>
     </div>
 
     <div class="contact-launch">
-      <button id="openContactPopup">
-        טופס יצירת קשר
-      </button>
+      <button id="openContactPopup">טופס יצירת קשר</button>
     </div>
 
-    <div style="text-align:center; font-size: 1.1em; margin-bottom: 10px;"><span dir="rtl" style="display:inline-block; unicode-bidi:isolate;">ליצירת קשר בוואטספ:</span></div>
+    <div style="text-align:center; font-size: 1.1em; margin-bottom: 10px;">
+      <span dir="rtl" style="display:inline-block; unicode-bidi:isolate;">ליצירת קשר בוואטספ:</span>
+    </div>
     <div style="text-align:center;">
       <a href="https://wa.me/+972547649019" target="_blank">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="וואטסאפ" style="width:48px;height:48px;">
       </a>
     </div>
 
-    <div class="popup-overlay" onclick="this.style.display='none';document.querySelector('.contact-popup').style.display='none';"></div>
+    <div class="popup-overlay"></div>
     <div class="contact-popup">
       <button class="close-popup" id="closeContactPopup">×</button>
-      <p style="text-align:right;font-size:1.1em;margin-bottom:8px;"><span dir="rtl" style="display:inline-block; unicode-bidi:isolate;">מעוניינת בפרטים נוספים? צרי איתנו קשר:</span></p>
-      <p style="text-align:right; direction: rtl;">טלפון: <span style="color:#e05a5a;">054-7649019</span></p>
-      <form action="https://formspree.io/f/mvojqzbo" method="POST">
+      <form id="contactForm" action="https://formspree.io/f/xqaqbjor" method="POST">
         <input type="text" name="name" placeholder="שם מלא" required style="width:100%;margin:10px 0;padding:10px;">
         <input type="text" name="phone" placeholder="טלפון נייד" required style="width:100%;margin:10px 0;padding:10px;">
         <textarea name="message" placeholder="נושא הפנייה" rows="4" style="width:100%;margin:10px 0;padding:10px;" required></textarea>
         <button type="submit" style="background:#e05a5a;color:white;border:none;padding:12px 24px;border-radius:10px;cursor:pointer;">שליחה</button>
+        <div id="formMessage" class="form-message"></div>
       </form>
     </div>
   </main>
@@ -149,24 +161,46 @@
     &copy; 2025 Meshi Eyebrows. כל הזכויות שמורות.
   </footer>
 
+  <script>
+    const openBtn = document.getElementById("openContactPopup");
+    const closeBtn = document.getElementById("closeContactPopup");
+    const overlay = document.querySelector(".popup-overlay");
+    const popup = document.querySelector(".contact-popup");
+    const form = document.getElementById("contactForm");
+    const messageBox = document.getElementById("formMessage");
+
+    openBtn.onclick = () => {
+      overlay.style.display = "block";
+      popup.style.display = "block";
+      messageBox.innerText = "";
+    };
+
+    closeBtn.onclick = overlay.onclick = () => {
+      overlay.style.display = "none";
+      popup.style.display = "none";
+    };
+
+    form.onsubmit = async function (e) {
+      e.preventDefault();
+      const data = new FormData(form);
+      const response = await fetch(form.action, {
+        method: "POST",
+        body: data,
+        headers: { 'Accept': 'application/json' }
+      });
+      if (response.ok) {
+        messageBox.className = "form-message success";
+        messageBox.innerText = "ההודעה נשלחה בהצלחה! נחזור אליך בהקדם.";
+        form.reset();
+      } else {
+        messageBox.className = "form-message error";
+        messageBox.innerText = "אירעה שגיאה בשליחת הטופס. אנא נסה שוב.";
+      }
+    };
+  </script>
+
   <!-- התחלת תוסף נגישות Enable -->
   <script>(function(d){var s = d.createElement("script");s.src = "https://cdn.equalweb.com/accessibility/accessibility.js";s.setAttribute("data-equalweb", "true");d.head.appendChild(s);})(document);</script>
   <!-- סיום תוסף נגישות Enable -->
-<script>
-  document.getElementById("openContactPopup").onclick = function () {
-    document.querySelector(".popup-overlay").style.display = "block";
-    document.querySelector(".contact-popup").style.display = "block";
-  };
-
-  document.getElementById("closeContactPopup").onclick = function () {
-    document.querySelector(".popup-overlay").style.display = "none";
-    document.querySelector(".contact-popup").style.display = "none";
-  };
-
-  document.querySelector(".popup-overlay").onclick = function () {
-    this.style.display = "none";
-    document.querySelector(".contact-popup").style.display = "none";
-  };
-</script>
 </body>
 </html>
